# GoodReads-xmlTree

./: CMakeLists.txt  README.md
include/: node.h  parser.h  treeFuncs.h
src/: main.cpp  node.cpp  node.h  parser.cpp  parser.h  tree.h  treeFuncs.cpp
